RESOLVED FIXED235262
[JSC] Fix misc WebAssembly.Table issues
https://bugs.webkit.org/show_bug.cgi?id=235262
Summary [JSC] Fix misc WebAssembly.Table issues
Yusuke Suzuki
Reported 2022-01-14 20:45:04 PST
[JSC] Fix misc WebAssembly.Table issues
Attachments
Patch (8.48 KB, patch)
2022-01-14 20:47 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2022-01-14 20:47:47 PST
EWS Watchlist
Comment 2 2022-01-14 20:49:02 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Alexey Shvayka
Comment 3 2022-01-15 06:16:47 PST
Comment on attachment 449241 [details] Patch Nice, I really appreciate detailed description of test changes.
EWS
Comment 4 2022-01-15 13:18:51 PST
Committed r288064 (246084@main): <https://commits.webkit.org/246084@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449241 [details].
Radar WebKit Bug Importer
Comment 5 2022-01-15 13:19:17 PST
Note You need to log in before you can comment on or make changes to this bug.